# authorize

./: Cargo.toml  README.md
src/: cipher.rs  lib.rs
src/checkers/: mod.rs  string.rs
