[package]
name = "authorize"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
description = "Library with generic authorization routines."
repository = "https://github.com/DenisKolodin/authorize"
license = "MIT/Apache-2.0"

[features]
default = ["hashing"]
hashing = ["rust-crypto"]

[dependencies]
rust-crypto = { version = "0.2.36", optional = true }
